
--Made bullets impotent during last half of their final fade-out.

--Improved appearance of bullet intersections with walls.

--Improved appearance of bullet explosions.

--Fixed crash triggered by power-up probability distributions around level 0.

--Fixed aspect ratio bug that could cause resolution SMALLER than 640x480 to
  be picked.



Version 7    2011-February-2

--Fixed so that multiple paragraph separators are not inserted when player
  closes pause screen without typing anything.

--Added extra tutorial message explaining entering sub-tokens.

--Changed so that first sub-level inside tokens has level-1 tokens on floor.

--Fixed tutorial completed detection when playing back a recorded game.

--Fixed bug in tutorial power-up rigging when resuming tutorial after quitting.

--Improved tutorial wording.

--Shorted some tutorial phrases to fit on a 5:3 (SXGA) aspect ratio monitor.

--Prevented level-number collision with health bar at super-high levels by
  dynamically shrinking the font.

--Enemy bullets quickly terminate after firing enemy is destroyed (thanks 
  Richard Lemarchand).

--Fixed more aspect ratio bugs.

--Limit on enemy cluster sizes at lower levels (thanks Richard Lemarchand). 

--Switched ESC to just toggle pause, and F4 to quit from pause screen.

--Added player health bar jitter when player hit.

--Improved dashboard appearance by having player healthbars move with their 
  corresponding power-up set during zoom.

--Added tool-tip text explaining each power-up.

--Added tips for power-up combos to tutorial.

--Fixed tutorial to wait until you rise back to where you started before 
  displaying the next (You can also enter...) tip.

--Fixed to prevent blocking symmetrical rise markers in narrow vertical 
  corridor at center of level.

--Added path highlight on floor to closest rise marker.

--Changed first three power-up tutorial levels to include heart tokens.

--Powers are now carried with you as you rise up (except when rising out of 